@@ -2,7 +2,7 @@ package ru.job4j.cache;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class DirFileCache extends AbstractCache<String, String> {
     private final String cachingDir;
@@ -13,9 +13,9 @@ public class DirFileCache extends AbstractCache<String, String> {
 
     @Override
     protected String load(String key) {
-        String rsl = null;
+        String rsl = "";
         try {
-            rsl = Files.readString(Paths.get(cachingDir, key));
+            rsl = Files.readString(Path.of(cachingDir, key));
             put(key, rsl);
         } catch (IOException ie) {
             ie.printStackTrace();
